Fix: Overlaping button, minor CSS fixes for login, register and dashboard

--- a/packages/frontend/src/App.css
+++ b/packages/frontend/src/App.css
@@ -53,6 +53,7 @@ p {
 
 .page-title {
   color: #95c623;
+  margin: 20px 0;
 }
 
 .button {
