--- a/packages/frontend/src/components/styles/login.css
+++ b/packages/frontend/src/components/styles/login.css
@@ -5,6 +5,12 @@
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  h2 {
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 30px;
+  }
 }
 
 .auth-form {
@@ -40,6 +46,9 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.2s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .submit-button:hover {
